# fiziData

./: .env  Dockerfile  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4370cbff56c6_add_player_table.py
