[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Alex Arkhipenko <fizi.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
sqlalchemy = "^1.4.0"
asyncpg = "^0.25.0"
databases = "^0.5.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.dev-dependencies]
alembic = "^1.7.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


